SERVER-28787 Invariant failure with QueryOption_AwaitData